--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   background-color: whitesmoke;
 }
+
+.Shoe{
+  background-color: lightslategray;
+  border:1px solid darkslategray;
+  border-radius: 0px 20px 20px 20px;
+  margin:20px;
+  padding: 20px;
+}
+
