--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   background-color: whitesmoke;
 }
 
-.Shoe{
+.card{
   background-color: lightslategray;
   border:1px solid darkslategray;
   border-radius: 0px 20px 20px 20px;
