--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 .card{
-  background-color: lightslategray;
+  background-color: darkblue;
   border:1px solid darkslategray;
   border-radius: 0px 20px 20px 20px;
   margin:20px;
