--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,13 @@ body {
 }
 
 .card{
-  background-color: darkblue;
   border:1px solid darkslategray;
   border-radius: 0px 20px 20px 20px;
   margin:20px;
   padding: 20px;
+}
+
+a{
+  cursor: pointer;
 }
 
